syntax = "proto3";
option java_package = "org.example.stubs";

service BankService {
    rpc Deposer(DeposerRequest) returns (DeposerResponse);
    rpc Retirer(RetirerRequest) returns (RetirerResponse);
    rpc Transferer(TransfererRequest) returns (TransfererResponse);
    rpc GetSolde(GetSoldeRequest) returns (GetSoldeResponse);
}

message DeposerRequest {
    Account account = 1;
    double montant = 2;
}

message DeposerResponse {
    Account account = 1;
}

message RetirerRequest {
    Account account = 1;
    double montant = 2;
}

message RetirerResponse {
    Account account = 1;
}

message TransfererRequest {
    Account account1 = 1;
    Account account2 = 2;
    double montant = 3;
}

message TransfererResponse {
    Account account1 = 1;
    Account account2 = 2;
}

message GetSoldeRequest {
    Account account = 1;
}

message GetSoldeResponse {
    double solde = 1;
}

message Account {
    double solde = 1;
}
